round up half stars

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                     <div class="self-assessment">
                         <h3>Self-Assessment</h3>
                         <p>Java <span class="rating">★★★★★</span></p>
-                        <p>Java Spring <span class="rating">★★★⯪☆</span></p>
-                        <p>Python <span class="rating">★★★★⯪</span></p>
+                        <p>Java Spring <span class="rating">★★★★☆</span></p>
+                        <p>Python <span class="rating">★★★★★</span></p>
                         <p>HTML <span class="rating">★★★★★</span></p>
-                        <p>CSS <span class="rating">★★★⯪☆</span></p>
+                        <p>CSS <span class="rating">★★★★☆</span></p>
                         <p>JavaScript <span class="rating">★★★☆☆</span></p>
                         <p>Databases <span class="rating">★★★★★</span></p>
                     </div>
