Add experience page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <div class="background">
         <div class="content">
             <div class="ticker">
-                <div class="wrapper"><p>WHAT'S ON MY MIND: Currently working on my portfolio website, it's pretty neat...</p>
+<!--                Currently working on my portfolio website, it's pretty neat...-->
+                <div class="wrapper"><p>WHAT'S ON MY MIND: Apply to jobs</p>
                 </div>
             </div>
             <div class="main">
@@ -54,7 +55,8 @@
                         <div class="links">
                             <a href="css/Resume%20April%202025.pdf" class="resume" target="_blank">Resume</a>
                             <a href="https://github.com/markelle-ngishu" class="github" target="_blank">GitHub</a>
-                            <a href="" class="work-history" hidden>Work History</a>
+                            <a href="experience.html" class="work-history">Work History</a>
+                            <a href="" class="mockup">Website Projects</a>
                         </div>
                     </div>
                     <div class="recent-projects">
@@ -84,7 +86,7 @@
 
                             <div class="project-element"><a href="https://github.com/markelle-ngishu/vacation_backend" target="_blank">
                                 <h5 class="title">
-                                    Hotel Reservation and Trip Planning Site Backend <span>★</span>
+                                    Hotel Reservation and Traip Planning Site Backend <span>★</span>
                                 </h5>
                                 <p class="description">
                                     This project involves developing a modern Java Spring backend for a travel agency’s vacation bookings application. The goal was to migrate mission-critical functionalities from an outdated 1990s backend to a more maintainable and scalable framework, addressing tech debt and enhancing data request handling.
