--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="content">
             <div class="ticker">
 <!--                Currently working on my portfolio website, it's pretty neat...-->
-                <div class="wrapper"><p>WHAT'S ON MY MIND: Apply to jobs</p>
+                <div class="wrapper"><p>WHAT'S ON MY MIND: Applying to jobs, tired but excited</p>
                 </div>
             </div>
             <div class="main">
@@ -56,7 +56,7 @@
                             <a href="css/Resume%20April%202025.pdf" class="resume" target="_blank">Resume</a>
                             <a href="https://github.com/markelle-ngishu" class="github" target="_blank">GitHub</a>
                             <a href="experience.html" class="work-history">Work History</a>
-                            <a href="" class="mockup">Website Projects</a>
+                            <a href="" class="mockup" hidden>Website Projects</a>
                         </div>
                     </div>
                     <div class="recent-projects">
